[package]
name = "suus-game-hub"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ratatui = "0.29.0"
ratatui-image = "0.8.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
rand = "0.8"
colorgrad = "0.7.0"
crossterm = "0.29.0"
tui-big-text = "0.7.1"
tui-gradient-block = "0.1.3"
tui-rule = "0.1.2"
ncurses = "5.100.0"
image = "0.24.9"

[build-dependencies]
cc = "1.0"
